--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 env_logger = "0.11"
 log = "0.4"
-surrealdb = { version = "2.3.0", features = ["kv-rocksdb", "protocol-ws"] }
+surrealdb = { version = "2", features = ["kv-rocksdb", "protocol-ws"] }
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 nanoid = "0.4"
+url = "2"
 
 [profile.release]
 lto = true
