--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 env_logger = "0.11"
 log = "0.4"
-surrealdb = { version = "2", features = ["kv-rocksdb", "protocol-ws"] }
+surrealdb = { version = "2", features = ["kv-rocksdb"] }
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 nanoid = "0.4"
 url = "2"
+thiserror = "1"
 
 [profile.release]
 lto = true
