--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,30 +17,30 @@
 		"test:e2e": "playwright test"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.38.0",
+		"@eslint/compat": "^2.0.0",
+		"@eslint/js": "^9.39.1",
 		"@playwright/test": "^1.56.1",
-		"@sveltejs/adapter-auto": "^7.0.0",
-		"@sveltejs/kit": "^2.47.1",
+		"@sveltejs/adapter-node": "^5.4.0",
+		"@sveltejs/kit": "^2.49.0",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"@tailwindcss/vite": "^4.1.14",
-		"@types/node": "^22",
-		"@vitest/browser-playwright": "^4.0.5",
-		"eslint": "^9.38.0",
+		"@tailwindcss/vite": "^4.1.17",
+		"@types/node": "^24",
+		"@vitest/browser-playwright": "^4.0.13",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.4",
-		"globals": "^16.4.0",
+		"eslint-plugin-svelte": "^3.13.0",
+		"globals": "^16.5.0",
 		"playwright": "^1.56.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
-		"svelte": "^5.41.0",
-		"svelte-check": "^4.3.3",
-		"tailwindcss": "^4.1.14",
+		"svelte": "^5.43.14",
+		"svelte-check": "^4.3.4",
+		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.1",
-		"vite": "^7.1.10",
-		"vitest": "^4.0.5",
+		"typescript-eslint": "^8.47.0",
+		"vite": "^7.2.4",
+		"vitest": "^4.0.13",
 		"vitest-browser-svelte": "^2.0.1"
 	}
 }
